# chip8_emu

./: .gitignore  README.md
chip8_core/: CMakeLists.txt  README.md
chip8_core/include/: chip8.hpp
chip8_core/src/: chip8.cpp  instructions.cpp  main.cpp  wasm_bindings.cpp
website/: index.html  package.json  tsconfig.app.json
website/src/: global.css  main.tsx  routes.tsx
website/src/lib/: chip8_wasm.d.ts  chip8_wasm.js
website/src/pages/: home.tsx  not-found.tsx
